# computer-vision

./: LeNet5_Architecture.ipynb  pyproject.toml
01- basic-number-cnn/: LeNet5_Architecture.ipynb  fix_all_model_vars.py  fix_notebook_evaluate.py  fix_notebook_load.py
02- basic-recog-system/: classification.ipynb  detection.ipynb  pyproject.toml
03- real-time-recog/: 01- gesture_recognition.ipynb  01.1- collect_hand_data.ipynb  01.2- train_gesture_model.ipynb  02- gaze_tracking.ipynb  gesture_recognition.ipynb  hand_landmarks_data.csv  main.py  object_detection.ipynb  pyproject.toml
03- real-time-recog/models/: gesture_model.pkl
basic-number-cnn/: LeNet5_Architecture.ipynb  final_fix.py  fix_notebook_robust.py  pyproject.toml
models/: lenet5_mnist.pth
recog-system/: classification.ipynb  detection.ipynb  segmentation.ipynb
